# melominoxide

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  rpc.rs  songs.rs  vlc_http.rs
