[package]
name = "melominoxide"
version = "0.1.0"
edition = "2024"

[dependencies]
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git" }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"